# berry

./: .gitignore  CMakeLists.txt  README.md  out.ll
berryc/: go.mod  main.go
berryc/cmd/: compiler.go
berryc/common/: ast.go  ast_def.go  ast_expr.go  ast_stmt.go  mod.go  symbol.go
berryc/dtypes/: cast.go  equals.go  prim_type.go  subtype.go  types.go  untyped.go
berryc/report/: display.go  exc.go  info.go  reporter.go
berryc/syntax/: lexer.go  parse_def.go  parse_expr.go  parse_stmt.go  parse_type.go  parser.go  token.go
berryc/util/: dump_string.go
berryc/walk/: check_op.go  walk_block.go  walk_def.go  walk_expr.go  walk_meta.go  walk_stmt.go  walker.go
docs/: feature_notes.md  malloc.md  modules.md
examples/: bf.bry  chaining.bry  cond_comp.bry  make.bry  meta_funcs.bry  method.bry  testing.bry
include/: arena.hpp  ast.hpp  base.hpp  checker.hpp  codegen.hpp  comptime.hpp  driver.hpp  escape.hpp  hir.hpp  ir.hpp  lexer.hpp  linker.hpp  loader.hpp  map_view.hpp  mtable.hpp  parser.hpp  platform.hpp  resolver.hpp  symbol.hpp  target.hpp  token.hpp  types.hpp  visitor.hpp
mods/std/core/: builtins.bry
mods/std/io/: std.bry
mods/std/io/std/: os_windows.bry  print.bry
mods/std/runtime/: atomic.bry  dprint.bry  exit.bry  fatal.bry  gc.bry  malloc.bry  malloc_stats.bry  os_windows.bry  panic.bry  print.bry  rprint.bry  rputs.bry  rstate.bry  rtstate.bry  start.bry  strmem.bry
mods/std/runtime/asm/: rt_windows_amd64.asm
mods/std/sys/windows/: consts.bry  kernel32.bry  win_types.bry
src/: arena.cpp  ast.cpp  comptime.cpp  driver.cpp  escape.cpp  linker.cpp  loader.cpp  main.cpp  report.cpp  resolver.cpp  target.cpp  visitor.cpp
src/check/: check_attr.cpp  check_block.cpp  check_comptime.cpp  check_decl.cpp  check_def.cpp  check_expr.cpp  check_op.cpp  check_pattern.cpp  check_stmt.cpp  checker.cpp  hir_alloc.cpp
src/codegen/: codegen.cpp  gen_atom.cpp  gen_block.cpp  gen_comptime.cpp  gen_debug.cpp  gen_decl.cpp  gen_def.cpp  gen_expr.cpp  gen_import.cpp  gen_main.cpp  gen_pattern.cpp  gen_stmt.cpp
src/link/: linker.cpp
src/syntax/: ast_alloc.cpp  enum_alloc.cpp  lexer.cpp  parse_block.cpp  parse_decl.cpp  parse_def.cpp  parse_directive.cpp  parse_expr.cpp  parse_import.cpp  parse_pattern.cpp  parse_stmt.cpp  parse_type.cpp  parser.cpp  token.cpp
src/test/: arena_test.cpp  arena_test.hpp  ast_print.cpp  ast_print.hpp
src/types/: prim_type.cpp  type_alloc.cpp  type_cmp.cpp  type_to_str.cpp  untyped.cpp
test/v1/: hello.bry
tests/v1/: hello.bry  utf8_test.txt
tests/v10/: directives.bry  linux_only.bry  macros.bry  unsafe.bry  windows_only.bry
tests/v11/: arrays.bry  divide_zero.bry  nullptr.bry  size_expr.bry
tests/v12/: divide_overflow.bry  divide_zero.bry  shift_overflow.bry  stack_overflow.bry
tests/v13/: builtin_methods.bry  extending.bry  factory.bry  importer.bry  methods.bry
tests/v14/: linked_list.bry  str_alloc.bry
tests/v15/: escape_test1.bry  linked_list.bry
tests/v2/: control_flow.bry
tests/v3/: arrays.bry  hello2.bry
tests/v4/: nice_hello.bry
tests/v5/: anonymous.bry  importer.bry  nested.bry  recursive.bry  user.bry  vector.bry
tests/v6/: comptime.bry  imported.bry  init_cycle.bry  init_cycle2.bry  init_cycle3.bry  init_ordering.bry  string_assign.bry  string_type.bry
tests/v7/: aliases.bry  enums.bry  matching.bry
tests/v8/: compare.bry  match_string.bry  ptr_arith.bry
